Correcting small menu layout problems Children in the mouseover window of family navigator are now implemented as list instead of br separated links
git-svn-id: svn://svn.webtrees.net/trunk@5581 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/phpGedView/themes/ocean/style.css
+++ b/phpGedView/themes/ocean/style.css
@@ -557,6 +557,8 @@ a:hover .nameZoom {
 }
 
 .submenuitem, .submenuitem_rtl {
+	vertical-align: middle;
+	height: 25px;
 	color: #555555;
 	text-decoration: none;
 	font: 11px tahoma, arial, helvetica, sans-serif;
@@ -574,6 +576,8 @@ a:hover .nameZoom {
 }
 
 .submenuitem_hover, .submenuitem_hover_rtl {
+	vertical-align: middle;
+	height: 25px;
 	color: black;
 	font: 11px tahoma, arial, helvetica, sans-serif;
 	background-color: #c1dfff;
@@ -582,7 +586,7 @@ a:hover .nameZoom {
 }
 
 .submenuitem a, .submenuitem_rtl a, .submenuitem_hover a, .submenuitem_hover_rtl a {
-	display: inline-table;
+	display: inline-block;
 	vertical-align: middle;
 }
 
@@ -988,6 +992,7 @@ thead {
 
 .rtl {
 	text-align: right;
+	direction: rtl;
 }
 
 /* Width settings */
@@ -1310,4 +1315,9 @@ a.showit:hover span {
 
 .wrap {
 	white-space: normal;
+}
+
+ul.clist {
+	list-style-image: none;
+	margin: 0px;
 }
