--- a/phpGedView/themes/simplygreen/style.css
+++ b/phpGedView/themes/simplygreen/style.css
@@ -1057,6 +1057,7 @@ h4 {
 
 .rtl {
 	text-align: right;
+	direction: rtl;
 }
 
 /* Width settings */
@@ -1382,4 +1383,9 @@ a.showit:hover span {
 
 .wrap {
 	white-space: normal;
+}
+
+ul.clist {
+	list-style-image: none;
+	margin: 0px;
 }
