--- a/phpGedView/themes/standard/style.css
+++ b/phpGedView/themes/standard/style.css
@@ -552,6 +552,8 @@ a:hover .nameZoom {
 }
 
 .submenuitem, .submenuitem_rtl {
+	vertical-align: middle;
+	height: 25px;
 	color: #555555;
 	text-decoration: none;
 	font: 11px tahoma, arial, helvetica, sans-serif;
@@ -569,6 +571,8 @@ a:hover .nameZoom {
 }
 
 .submenuitem_hover, .submenuitem_hover_rtl {
+	vertical-align: middle;
+	height: 25px;
 	color: black;
 	font: 11px tahoma, arial, helvetica, sans-serif;
 	background-color: #e6f0fa;
@@ -577,7 +581,7 @@ a:hover .nameZoom {
 }
 
 .submenuitem a, .submenuitem_rtl a, .submenuitem_hover a, .submenuitem_hover_rtl a {
-	display: inline-table;
+	display: inline-block;
 	vertical-align: middle;
 }
 
@@ -1001,6 +1005,7 @@ h4 {
 
 .rtl {
 	text-align: right;
+	direction: rtl;
 }
 
 /* Width settings */
@@ -1322,4 +1327,9 @@ a.showit:hover span {
 
 .wrap {
 	white-space: normal;
+}
+
+ul.clist {
+	list-style-image: none;
+	margin: 0px;
 }
