--- a/phpGedView/themes/xenea/style.css
+++ b/phpGedView/themes/xenea/style.css
@@ -648,6 +648,8 @@ a:hover .nameZoom {
 }
 
 .submenuitem, .submenuitem_rtl {
+	vertical-align: middle;
+	height: 22px;
 	color: black;
 	font: normal 11px tahoma, arial, helvetica, sans-serif;
 	text-decoration: none;
@@ -664,30 +666,21 @@ a:hover .nameZoom {
 	text-align: right;
 }
 
- .submenuitem a {
+.submenuitem a, .submenuitem_rtl a, .submenuitem_hover a, .submenuitem_hover_rtl a {
  	color: black;
-	display: inline-table;
+	display: inline-block;
 	vertical-align: middle;
- }
+}
  
- .submenuitem_rtl a {
- 	color: black;
-	display: inline-table;
-	vertical-align: middle;
- }
-
 .submenuitem_hover, .submenuitem_hover_rtl {
+	vertical-align: middle;
+	height: 22px;
 	color: black;
 	font: normal 11px tahoma, arial, helvetica, sans-serif;
 	text-decoration: none;
 	background-color: white;
 	white-space: nowrap;
 	padding: 1px;
-}
-
-.submenuitem_hover a, .submenuitem_hover_rtl a {
-	display: inline-table;
-	vertical-align: middle;
 }
 
 .news_box {
@@ -1103,6 +1096,7 @@ h4 {
 
 .rtl {
 	text-align: right;
+	direction: rtl;
 }
 
 /* Width settings */
@@ -1423,4 +1417,9 @@ a.showit:hover span {
 
 .wrap {
 	white-space: normal;
+}
+
+ul.clist {
+	list-style-image: none;
+	margin: 0px;
 }
